force-app/main/default/objects/Library_Item__c/Library_Item__c.object-meta.xml
<CustomObject>
    <label>Library Item</label>
    <pluralLabel>Library Items</pluralLabel>
    <nameField>
        <label>Library Item Name</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <picklist>
            <values>
                <fullName>Book</fullName>
            </values>
            <values>
                <fullName>AV Equipment</fullName>
            </values>
        </picklist>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <picklist>
            <values>
                <fullName>Available</fullName>
            </values>
            <values>
                <fullName>Checked Out</fullName>
            </values>
        </picklist>
    </fields>
    <fields>
        <fullName>Barcode__c</fullName>
        <label>Barcode</label>
        <type>Text</type>
        <length>255</length>
    </fields>
</CustomObject>