force-app/main/default/objects/Library_Item__c/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <label>Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Fiction</fullName>
            </value>
            <value>
                <fullName>Non-Fiction</fullName>
            </value>
            <value>
                <fullName>Reference</fullName>
            </value>
            <value>
                <fullName>Projector</fullName>
            </value>
            <value>
                <fullName>Camera</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>